--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -19,13 +19,7 @@
     <script src='@routes.Assets.versioned("javascripts/prism.js")' type="text/javascript"></script>
 </head>
 
-<body>
-    <section id="top">
-        <div class="wrapper">
-            <img class="resize" src="assets/images/play_icon_reverse.svg" alt="logo" />
-            <h1>Play Hello World Web Tutorial</h1>
-        </div>
-    </section>
+<body style="padding: 16px">
     @content
 </body>
 
