--- a/app/views/todo/create.scala.html
+++ b/app/views/todo/create.scala.html
@@ -4,7 +4,7 @@
 @(todoForm: Form[TodoForm])(implicit request: RequestHeader, messages: Messages)
 
 @main("Create Todo") {
-    @form(routes.TodoController.post) {
+    @form(routes.TodoController.createAction) {
         @CSRF.formField
         @inputText(todoForm("content"))
         <input type="submit">
